# BIFROST

./: README.md
API/API/: Cargo.toml  id2.json
API/API/src/: handler_file.rs  handler_json.rs  main.rs  user.rs
API/API/src/SiteHtml/: web.html
API/API/src/json_file/: id.json
API/API_Actix/https/: Cargo.toml  Dockerfile  postgres.yml
API/API_Actix/https/error/: error.html
API/API_Actix/https/json/: data.json
API/API_Actix/https/src/: extractionhttp.rs  handler.rs  handler_json.rs  main.rs  service_discovery.rs  static_file.rs  tlsconfig.rs
API/API_Actix/https/website/: log.html  style.css  web.html
API/BDD/Mysqlbase/: Cargo.toml
API/BDD/Mysqlbase/src/: main.rs
Assemblage/: Cargo.toml  Code qui marche.txt  Open.txt
Assemblage/src/: main.rs
Assemblage/templates/: Marre.html  SignUp.css  app.js  bifrost.css  bifrost.html  choix.html  contact.css  contact.html  index.html  login.html  loginbifrost1.html  marre.css  menu1.html  menushowthis.html  page1.css  page1.html  page2.css  page3.html  script.js  show.html  test.html
Others/PartieHugo/: aes.rs  codeexemple.rs
Others/PartieLoic/: Ex_API.rs.rs  README.md
Others/PartieLoic/Actix/HelloWorld/: Cargo.toml
Others/PartieLoic/Actix/Requete/static/: welcome.html
Others/PartieLoic/Axium/: README.md
Others/PartieLoic/Axium/src/: hello.html
Others/PartieThomas/code site web/salutations/: 404.html  hello.html
Others/Partiecoco/app-ssr/: Cargo.toml
Others/Partiecoco/app-ssr/src/: main.rs
Others/Partiecoco/app-ssr/templates/: index.html  show.html
Others/Partiecoco/cloud-gateway/Certificate/: 127.0.0.1+1-key.pem  127.0.0.1+1.pem
Others/Partiecoco/cloud-gateway/src/: main.rs  tls.rs
Others/Partiecoco/data/templates/: index.html  show.html
Others/Partiecoco/gateway/src/: main.rs
Others/Partiecoco/https/Certificate/: 127.0.0.1+1.pem
Others/Partiecoco/https/src/: main.rs
Others/Partiecoco/serveur-web/: Cargo.toml
Others/codeRust/: helloWorld.rs
PartieHugo/: README.md  codeexemple.rs
PartieLoic/: README.md
PartieLoic/ProjetCyber/: Cargo.toml
PartieLoic/ProjetCyber/src/: Api.rs
PartieQuentin/: .env  Cargo.toml
PartieQuentin/API/src/: handler_file.rs  main.rs
PartieQuentin/API/src/SiteHtml/: style.css  web.html
PartieQuentin/BIFROST_DB/: BIFROST_DB.sqlproj
PartieQuentin/Requete_HTTP_Test/http_request/: Cargo.toml
PartieQuentin/src/: handler_file.rs  main.rs
PartieQuentin/src/SiteHtml/: web.html
PartieThomas/: popo.txt
PartieThomas/code site web/salutations/: Cargo.toml
PartieThomas/code site web/salutations/src/: lib.rs
Partiecoco/serveur-web/: 404.html  hello.html
RECHERCHE/ANCIEN_PROTO/API/API_Actix/https/: Cargo.toml  Dockerfile
RECHERCHE/ANCIEN_PROTO/API/API_Actix/https/src/: extractionhttp.rs  main.rs  tlsconfig.rs
RECHERCHE/Others/PartieLoic/: README.md
RECHERCHE/Others/PartieLoic/Actix/HelloWorld/: README.md
RECHERCHE/Others/PartieLoic/Actix/HelloWorld/src/: main.rs
RECHERCHE/Others/PartieLoic/Actix/TLSHTTPS/: README.md
RECHERCHE/Others/PartieLoic/Actix/state/: README.md
RECHERCHE/Others/PartieLoic/TestRust(Brouillon)/Test/: Cargo.toml  README.md
RECHERCHE/Others/PartieLoic/TestRust(Brouillon)/Test/src/: main.rs
RECHERCHE/Others/PartieThomas/code site web/: README.txt
RECHERCHE/Others/PartieThomas/code site web/salutations/: style.css
RECHERCHE/Others/PartieThomas/code site web/salutations/src/: main.rs
RECHERCHE/Others/Partiecoco/cloud-gateway/: Cargo.toml
RECHERCHE/Others/Partiecoco/data/: Cargo.toml
RECHERCHE/Others/Partiecoco/data/src/: main.rs
RECHERCHE/Others/Partiecoco/gateway/: Cargo.toml
RECHERCHE/Others/Partiecoco/https/: Cargo.toml
RECHERCHE/Others/Partiecoco/https/Certificate/: 127.0.0.1+1-key.pem
RECHERCHE/Others/Partiecoco/serveur-web/src/: lib.rs
prototype/: Cargo.toml
prototype/Certificate/: 127.0.0.1+1-key.pem  127.0.0.1+1.pem
prototype/src/: https-proxy.rs  main.rs  tls.rs  websocket-client.rs  websocket-server.rs
prototype/templates/: index.html  show.html  test.html
