[package]
name = "ProjetCyber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework that focuses on ergonomics and modularity.
axum = "0.4.8"

# Modular reusable components for building robust clients and servers.
tower = "0.4.12"

# A fast and correct HTTP library.
hyper = { version = "0.14.17", features = ["full"] }

# Event-driven, non-blocking I/O platform.
tokio = { version = "1.17.0", features = ["full"] }

# A serialization/deserialization framework.
serde = { version = "1.0.136", features = ["derive"] }

# Serde serializion/deserialization of JSON data.
serde_json = "1.0.79"

# Encode and decode base64 as bytes or utf8.
base64 = "0.13"

# Types for HTTP requests and responses.
http = "0.2.6" 