[package]
name = "https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#web-server
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.18"

#load html file
actix-files = "0.6"


#authentification
env_logger = "0.9"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"

# Request 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"


#Database
