[package]
name = "cloud-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = {version = "0.14.23", features = ["full"]}
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.18"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"