[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
hyper = { version = "0.14.12", features = ["http1", "server", "tcp"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4.0"