[package]
name = "https"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.18"
actix-files = "0.6"

env_logger = "0.9"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"
